--- a/publication.html
+++ b/publication.html
@@ -90,12 +90,6 @@
 </li>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2102.07572">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; <i>Proceedings of the IEEE</i>, in press.</p>
 </li>
-<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, S. Pandya, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128622001955">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, in press.</p>
-</li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9768809">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; <i>IEEE Access</i>, in press. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
-</li>
-<li><p>A. S. Sadiq, A. A. Dehkordi, S. Mirjalili, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417422007400">Nonlinear Marine Predator Algorithm: A Cost-effective Optimizer for Fair Power Allocation in NOMA-VLC-B5G Network</a>,&rdquo; <i>Expert Systems With Applications</i>, in press. [<a href="https://www.mathworks.com/matlabcentral/fileexchange/111135-nonlinear-marine-predator-algorithm-nmpa">MATLAB Code</a>]</p>
-</li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, T. T. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9743401">RanNet: Learning Residual-Attention Structure in CNNs for Automatic Modulation Classification</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, in press.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, in press.</p>
@@ -110,6 +104,10 @@
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
+<li><p>A. S. Sadiq, A. A. Dehkordi, S. Mirjalili, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417422007400">Nonlinear Marine Predator Algorithm: A Cost-effective Optimizer for Fair Power Allocation in NOMA-VLC-B5G Network</a>,&rdquo; <i>Expert Systems with Applications</i>, vol. 203, pp. 117395, Oct. 2022. [<a href="https://www.mathworks.com/matlabcentral/fileexchange/111135-nonlinear-marine-predator-algorithm-nmpa">MATLAB Code</a>]</p>
+</li>
+<li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, S. Pandya, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128622001955">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, vol. 212, pp. 109048, Jul. 2022.</p>
+</li>
 <li><p>M. Liyanage, <b>Q.-V. Pham</b>, K. Dev, S. Bhattacharya, P. K. R. Maddikunta, T. R. Gadekallu, and G. Yenduri, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804522000297">A Survey on Zero Touch Network and Service Management (ZSM) for 5G and Beyond Networks</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 203, pp. 103362, Jul. 2022.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
@@ -117,6 +115,8 @@
 <li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://authors.elsevier.com/sd/article/S0167-739X(22)00024-3">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 131, pp. 209-226, Jun. 2022.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022.</p>
+</li>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9768809">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; <i>IEEE Access</i>, vol. 10, pp. 49696-49707, May 2022. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
 </li>
 <li><p>M. Alazab, R. M. Swarna Priya, M. Parimala, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, vol. 18, no. 5, pp. 3501-3509, May 2022.</p>
 </li>
@@ -314,7 +314,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-25 10:47:19 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-29 11:26:57 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
